<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">



    <LinearLayout
        android:id="@+id/singleMessageContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_pic"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_sign_out"
            android:contentDescription="@string/image"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/prompt_msg"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/sample_message"
                android:textColor="@android:color/primary_text_light"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</layout>