<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/movie_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.srjlove.trailerbuzz.fragments.MovieDetailFragment">

        <!-- TODO: Update blank fragment layout -->
        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment" />-->


        <ProgressBar
            android:id="@+id/progress_bar_movie_detail_fragment"
            style="?attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100"
            android:visibility="invisible" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_movie_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">


                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="180dp"
                    android:layout_height="220dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/ic_autorenew_black_24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_realse_date"
                    style="@style/text_view_in_movie_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/iv_movie_poster"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="release date" />

                <TextView
                    android:id="@+id/tv_movie_duration"
                    style="@style/text_view_in_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_realse_date"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_realse_date"
                    tools:text="duration" />

                <RatingBar
                    android:id="@+id/rb_movie_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:numStars="5"
                    android:stepSize="0.5"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_movie_duration"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_duration" />

                <TextView
                    android:id="@+id/tv_overview_of_movie"
                    style="@style/text_view_in_movie_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="@+id/iv_movie_poster"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
                    tools:text="Overview" />

                <TextView
                    android:id="@+id/tv_trailor_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/trailer"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview_of_movie" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="24dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_trailor_label" />

                <TextView
                    android:id="@+id/tv_reviews_label"
                    style="@style/text_view_in_movie_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/review"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_trailor_label"
                    app:layout_constraintTop_toBottomOf="@+id/rv_trailors" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />

                <ImageView
                    android:id="@+id/iv_add_to_favourite"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/image"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
                    app:layout_constraintLeft_toLeftOf="@+id/rb_movie_rating"
                    app:layout_constraintTop_toBottomOf="@+id/rb_movie_rating"
                    app:srcCompat="@drawable/fav"
                    tools:ignore="VectorDrawableCompat" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

</layout>
